# eboekhouden-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml
eboekhouden_python/: __init__.py  eboekhouden_client.py
eboekhouden_python/constants/: __init__.py  bedrijf_particulier.py  btw_code.py  in_ex_btw.py  mutatie_soort.py  open_post_soort.py  string_enum.py
eboekhouden_python/models/: __init__.py  mutatie.py  mutatie_filter.py  mutatie_regel.py  open_post.py  relatie.py  relatie_filter.py
notebooks/: 1_example.ipynb
scripts/: 1_test.py
tests/: __init__.py  mock_server.py  test_eboekhouden_client.py  test_models_mutatie.py  test_models_mutatie_filter.py  test_models_mutatie_regel.py  test_models_open_post.py  test_models_relatie.py  test_models_relatie_filter.py  test_version_same_as_pyproject.py
