[tool.poetry]
name = "eboekhouden-python"
version = "0.1.2"
description = "This is a simple API client for the E-boekhouden.nl API. It is written in Python and uses the ZEEP library."
authors = ["Dennis Bakhuis <pypi@bakhuis.nu>"]
readme = "README.md"
packages = [{include = "eboekhouden_python"}]
license = "MIT"
homepage = "https://github.com/dennisbakhuis/eboekhouden-python"
repository = "https://github.com/dennisbakhuis/eboekhouden-python"
keywords = ["e-boekhouden", "eboekhouden", "api", "zeep", "soap", "client", "python"]

[tool.poetry.dependencies]
python = "^3.9"
zeep = "^4.2.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
pre-commit = "^3.2.1"
pytest = "^7.2.2"
jupyter = "^1.0.0"
pytest-cov = "^4.0.0"
coverage = "^7.2.2"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
convention = "numpy"
