[tool.poetry]
name = "eboekhouden-python"
version = "0.3.0"
description = "This is a simple API client for the E-boekhouden.nl API. It is written in Python and uses the ZEEP library."
authors = ["Dennis Bakhuis <pypi@bakhuis.nu>"]
readme = "README.md"
packages = [{ include = "eboekhouden_python" }]
license = "MIT"
homepage = "https://github.com/dennisbakhuis/eboekhouden-python"
repository = "https://github.com/dennisbakhuis/eboekhouden-python"
keywords = [
  "e-boekhouden",
  "eboekhouden",
  "api",
  "zeep",
  "soap",
  "client",
  "python",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
zeep = "^4.3.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.4"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
jupyter = "^1.1.1"
pytest-cov = "^6.0.0"
coverage = "^7.6.10"
tomli = "^2.2.1"

[tool.ruff]
line-length = 100
exclude = [".ipynb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
convention = "numpy"
